--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -7,27 +7,21 @@
     display: grid;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: $card-width;
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
-}
 
-@media (min-width: 488px) {
-  .catalog {
-    grid-template-columns: repeat(2, 200px);
+  @media (min-width: 488px) {
+    grid-template-columns: repeat(2, $card-width);
   }
-}
 
-@media (min-width: 768px) {
-  .catalog {
-    grid-template-columns: repeat(3, 200px);
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(3, $card-width);
   }
-}
-
-@media (min-width: 1024px) {
-  .catalog {
-    grid-template-columns: repeat(4, 200px);
+  
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(4, $card-width);
   }
 }
